2005-04-14  Keith Seitz  <keiths@redhat.com>

	* LinuxOpcontrolProvider.java (_OPD_SETUP_SEPARATE_ALL): New static variable.
	(_OPD_KERNEL_NONE0: New static variable.
	(_OPD_KERNEL_FILE): New static variable.
	(_OPD_VERBOSE_LOGGING): New static variable.
	(_OPD_VERBOSE_ALL): New static variable.
	(_OPD_VERBOSE_SFILE): New static variable.
	(_OPD_VERBOSE_ARCS): New static variable.
	(_OPD_VERBOSE_SAMPELS): New static variable.
	(_OPD_VERBOSE_MODULE): New static variable.
	(_OPD_VERBOSE_MISC): New static variable.
	(optionsToArguments): Add missing options.

2004-08-27  Keith Seitz  <keiths@redhat.com>

	* LinuxOpcontrolProvider.java (_OPD_SETUP_SEPARATE): New constant.
	(_OPD_SETUP_SEPARATE_SEPARATOR): New constant.
	(_OPD_SETUP_SEPARATE_SEPARATOR): New constant.
	(_OPD_SETUP_SEPARATE_LIBRARY): New constant.
	(_OPD_SETUP_SEPARATE_KERNEL): New constant.
	(_OPD_SETUP_SEPARATE_THREAD): New constant.
	(_OPD_SETUP_SEPARATE_CPU): New constant.
	(_OPD_SETUP_SEPARATE_EVENT): New constant.
	(_OPD_SETUP_SEPARATE_EVENT_SEPARATOR): New constant.
	(_OPD_SETUP_SEPARATE_EVENT_TRUE): New constant.
	(_OPD_SETUP_SEPARATE_FALSE): New constant.
	(setupDaemon): Change parameter list to OprofileDaemonOptions
	and OprofileDaemonEvent.
	Derive command-line arguments from arguments.
	(_eventToArguments): New method.
	(_optionsToArguments): New method.
	* LinuxOpxmlProvider.java (samples): Remove integer counter number; use
	event text name instead.
	(debugInfo): Use ProfileImage instead of SampleFile.
	* OpxmlRunner.java (run): Remove invalid comment.

2004-07-13  Keith Seitz  <keiths@redhat.com>

	* LinuxOpcontrolProvider.java (_OPCONTROL_PROGRAM): Call _findOpcontrol.
	(_findOpcontrol): New method.
	* OpxmlRunner.java (_OPXML_PROGRAM): New constant.
	(run): Use XMLReaderFactory.createXMLReader again.
	(_findOpxml): New method.

2004-04-20  Keith Seitz  <keiths@redhat.com>

	* LinuxOpcontrolProvider.java: New file.
	* LinuxOpxmlProvider.java: New file.
	* OpxmlRunner.java: New file.
