@@ -1,3 +1,13 @@
+2006-04-28  Keith Seitz  <keiths@redhat.com>
+
+	* LinuxOpcontrolProvider.java (_verbosity): New private member.
+	(_runOpcontrol): When running with --start or --start-daemon,
+	add verbosity flag.
+	(_optionsToArguments): Don't append verbosity. Just save the value.
+
+	* OpxmlRunner.java (run): Use javax.xml.parsers.SAXParserFactory
+	instead of org.xml.sax.helpers.XMLReaderFactory.
+
 2005-04-14  Keith Seitz  <keiths@redhat.com>
 
 	* LinuxOpcontrolProvider.java (_OPD_SETUP_SEPARATE_ALL): New static variable.
